--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Christina Pham's DS Portfolio</title>
+  <title>Nuthara Bandara's DS Portfolio</title>
 
   <link rel="stylesheet" href="index.css">
 
@@ -77,7 +77,7 @@
   <!--Navigation bar and title-->
     <header>
     <h1>ECON30006: Data Visualisation Portfolio</h1>
-    <p><strong>Christina Pham</strong></p>
+    <p><strong>Nuthara Bandara</strong></p>
     </header>
   
     <h3>Covid-19 Cases</h3>
