--- a/index.html
+++ b/index.html
@@ -56,8 +56,21 @@
       </script>
   </div>
 
-<!-- /////////////////// WEEK 2 //////////////////////////////////// -->
-    
+
+<!-- /////////////////// WEEK 2 //////////////////////////////////// -->  
+  <div class="chart" id="secondChart">
+    <script>
+      var myChart2 = "chartFootball1.json";
+      vegaEmbed('#secondChart', myChart2);
+    </script>
+  </div>
+  
+  <div class="chart" id="thirdChart">
+    <script>
+      var myChart3 = "Myweek2chart.json";
+      vegaEmbed('#thirdChart', myChart3);
+    </script>
+  </div>  
     
 </body>
 <!-- ///////////////////  END BODY //////////////////////////////////// -->
