--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           //Following the script tag, we are now using Javascript
           //One way to tell is to see how comments work
           //First job is to set the chart as a JS variable
-          var myChart1 = "chart1_covidUKRegions.json";
+          var myChart1 = ""charts/chart1_covidUKRegions.json";";
           //Now we simply insert it, using Vega's embed code:
           vegaEmbed('#chart1', myChart1);
         </script>
@@ -100,7 +100,7 @@
 <!--Chart 2 -->
   <div class="chart" id="chart2">
        <script>
-        var myChart2 = "chart2_ukProductivity.json";
+        var myChart2 =  "charts/chart2_ukProductivity.json";
         vegaEmbed('#chart2', myChart2);
       </script>
   </div>
