--- a/index.html
+++ b/index.html
@@ -117,6 +117,16 @@
       </script>
   </div>
 <!-- ///////////////////  WEEK 2//////////////////////////////////// -->
+  
+  <!--Resurgence of Covid Cases Chart -->
+  
+<div class="chart" id="chart4">
+    <script>
+      var myChart4 = "charts/chart_CovidCasesAPI.json";
+      vegaEmbed('#chart4', myChart4);
+    </script>
+  </div>
+  
 
 </body>
 <!-- ///////////////////  END BODY //////////////////////////////////// -->
