--- a/index.html
+++ b/index.html
@@ -122,6 +122,11 @@
   
   <!--Resurgence of Covid Cases Chart -->
   
+       <h3>Resurgence of Covid 19 </h3>
+    
+      <p>My fourth chart highlights trends in new Covid cases in the given regions.</p>
+    <p>This chart was hosted from a given API.</p>
+    
 <div class="chart" id="chart4">
     <script>
       var myChart4 = "charts/chart_CovidCasesAPI.json";
