--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     margin: 0;
     padding: 0;
     width: 15%;
-    background-color: #7a6a6a;
+    background-color: #dcb8bb;
     position: fixed;
     height: 100%;
     overflow: auto;
@@ -43,13 +43,13 @@
 
   li a.active {
     background-color: #cea796;
-    color: white;
+    color: hotpink;
     font-weight: 900;
   }
 
   li a:hover:not(.active) {
     background-color: #555;
-    color: white;
+    color: hotpink;
 
   }
 
