--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   <!--Chart 3 -->
   <div class="chart" id="chart3">
     <script>
-      var myChart3 = "charts/chart3_crypto1";
+      var myChart3 = "charts/chartcrypto13.json";
       vegaEmbed('#chart3', myChart3);
     </script>
    </div>
