--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
   
   <!--Chart 4 -->
   
+  <p class="bodyText"><span style="color: rgb(19, 143, 242); font-weight: 700;">Week 2: </span>Getting started</p>
+    
        <h3>Resurgence of Covid 19 </h3>
     
       <p>My fourth chart highlights trends in new Covid cases in the given regions.</p>
