--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 
 
 <!-- ///////////////////  HEAD //////////////////////////////////// -->
+<div class="wrapper">
+    <div class="typing-demo">
+      Welcome to Nuthara Bandara's DS Portfolio...
+    </div>
+</div>
 
 <head>
 
