--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.12.2"></script>
 
 <!-- Title -->
-<h1>ECON30006: Data Science Portfolio</h1>
+<h1>Data Science Portfolio</h1>
     <h2><b>by Nuthara Bandara</b> </h2>
 
 <!-- CSS -->
 <link rel="stylesheet" href="index.css">
 
-<!--Favicon-->
+<!--Favicon-->  
 <link rel="icon" href="icon.png">
 
 
