--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <script src="https://cdn.jsdelivr.net/npm/vega@5.17.0"></script>
 <script src="https://cdn.jsdelivr.net/npm/vega-lite@4.17.0"></script>
 <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.12.2"></script>
-
+    
 <!-- Title -->
+    
+<title>Nuthara Bandara</title>
 <h1>Data Science Portfolio</h1>
     <h2><b>by Nuthara Bandara</b> </h2>
 
