--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <link rel="stylesheet" href="index.css">
 
 <!--Favicon-->  
-<link rel="icon" href="icon.png">
+<link rel="shortcut icon" type="image/png" href="icon"/>
 
 
 <head>
