--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     
 <div class="chart" id="chart10">
     <script>
-      var myChart10 = "charts/chart_indc02";
+      var myChart10 = "charts/chart_indco2";
       vegaEmbed('#chart10', myChart10);
     </script>
   </div>     
