--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!--//////////////////////////// body ////////////////////////////////// -->
 
    <!--Navigation buttons-->
-<div class="buttons">
+<div class="button">
   <button style="color: rgb(222, 151, 242);" onclick="location.href='index.html'">Portfolio</button>
   <button onclick="location.href='project_page.html'">Project</button>
   <button onclick="location.href='https://github.com/nutharabandara/nutharabandara.github.io'">Github</button>
