--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
   <!--//////////////////////////// body ////////////////////////////////// -->
 
    <!--Navigation buttons-->
-<div class="button">
-  <button style="color: rgb(222, 151, 242);" onclick="location.href='index.html'">Portfolio</button>
-  <button onclick="location.href='project_page.html'">Project</button>
-  <button onclick="location.href='https://github.com/nutharabandara/nutharabandara.github.io'">Github</button>
-    <button onclick="location.href='https://rapidcharts.io/datascience'">Course</button>
+<div class=".button">
+  <button class="button" style="color: rgb(222, 151, 242);" onclick="location.href='index.html'">Portfolio</button>
+  <button class="button" onclick="location.href='project_page.html'">Project</button>
+  <button class="button" onclick="location.href='https://github.com/nutharabandara/nutharabandara.github.io'">Github</button>
+   <button class="button" onclick="location.href='https://rapidcharts.io/datascience'">Course</button>
 </div>
     
 
