--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     
 <div class="chart" id="chart15">
     <script>
-      var myChart15 = "charts/chart_talkingecon";
+      var myChart15 = "charts/chart_talkingecon.json";
       vegaEmbed('#chart15', myChart15);
     </script>
   </div>    
