--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
      <!-- ///////////////////  WEEK 10 //////////////////////////////////// -->
   
 
-  <p class="bodyText"><span style="color: rgb(19, 143, 242); font-weight: 700;">Week 8: </span> Interactive Graph </p>
+  <p class="bodyText"><span style="color: rgb(19, 143, 242); font-weight: 700;">Week 8: </span> Interactive Graphs </p>
     
       <container class="ncontainer">
         
