--- a/project.html
+++ b/project.html
@@ -37,7 +37,7 @@
       
       <div class="btn-holder">
   <button class="btn btn-5 hover-border-11" onclick="location.href='index.html'">Portfolio</button>
-  <button class="btn btn-5 hover-border-11" onclick="location.href='project_page.html'">Project</button>
+  <button class="btn btn-5 hover-border-11" onclick="location.href='project.html'">Project</button>
   <button class="btn btn-5 hover-border-11" onclick="location.href='https://github.com/nutharabandara/nutharabandara.github.io'">Github</button>
   <button class="btn btn-5 hover-border-11" onclick="location.href='https://rapidcharts.io/datascience'">Course</button>
        </div>
