--- a/project.html
+++ b/project.html
@@ -1,6 +1,7 @@
   
   <!--//////////////////////////// charts ////////////////////////////////// -->
-  
+  <link rel="stylesheet" href="index.css">
+
   <!--Chart 1 -->
     
 <div class="chart" id="chart1">
