--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h2><b>by Nuthara Bandara</b> </h2>
 
 <!-- CSS -->
-<link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="styles.css">
 
 <!--Favicon-->  
 <link rel="shortcut icon" type="image/png" href="icon"/>
