--- a/project.html
+++ b/project.html
@@ -1,6 +1,6 @@
   
   <!--//////////////////////////// charts ////////////////////////////////// -->
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="project.css">
 
   <!--Chart 1 -->
     
