--- a/project.html
+++ b/project.html
@@ -73,7 +73,7 @@
     
 <div class="chart" id="chart4">
     <script>
-      var myChart4 = "charts/project/charts/project/Diet_composition_trellis";
+      var myChart4 = "charts/project/charts/project/Diet_composition_trellis.json";
       vegaEmbed('#chart4', myChart4);
     </script>
   </div>  
