--- a/project.html
+++ b/project.html
@@ -96,10 +96,10 @@
    <container class="ncontainer">
      
     <h3>Share of Population unable to afford a calorie-sufficient diet</h3>
-    <iframe title="" aria-label="Map" id="https://datawrapper.dwcdn.net/X9zO8/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 60% !important; border: none;" height="383"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();</script>
-     </container>
-
-
+     <iframe title="" aria-label="Map" id="datawrapper-chart-X9zO8" src="https://datawrapper.dwcdn.net/X9zO8/3/" scrolling="no" frameborder="0" style="border: none;" width="600" height="330"></iframe>
+  </script>
+    </container>
+  
 <!--Chart 5 -->
       
      <container class="ncontainer">
