--- a/project.html
+++ b/project.html
@@ -30,10 +30,10 @@
    <!--Navigation buttons-->
       
       <div class="btn-holder">
-  <button class="btn btn-5 hover-border-11" onclick="location.href='index.html'">Portfolio</button>
-  <button class="btn btn-5 hover-border-11" onclick="location.href='project.html'">Project</button>
-  <button class="btn btn-5 hover-border-11" onclick="location.href='https://github.com/nutharabandara/nutharabandara.github.io'">Github</button>
-  <button class="btn btn-5 hover-border-11" onclick="location.href='https://rapidcharts.io/datascience'">Course</button>
+  <button class="btn" onclick="location.href='index.html'">Portfolio</button>
+  <button class="btn" onclick="location.href='project.html'">Project</button>
+  <button class="btn" onclick="location.href='https://github.com/nutharabandara/nutharabandara.github.io'">Github</button>
+  <button class="btn" onclick="location.href='https://rapidcharts.io/datascience'">Course</button>
        </div>
       
    <container class="ncontainer">
