--- a/project.html
+++ b/project.html
@@ -30,10 +30,10 @@
    <!--Navigation buttons-->
       
       <div class="btn-holder">
-  <button class="btn" onclick="location.href='index.html'">Portfolio</button>
-  <button class="btn" onclick="location.href='project.html'">Project</button>
-  <button class="btn" onclick="location.href='https://github.com/nutharabandara/nutharabandara.github.io'">Github</button>
-  <button class="btn" onclick="location.href='https://rapidcharts.io/datascience'">Course</button>
+  <button class="button" onclick="location.href='index.html'"><i class="fas fa-chart-bar"></i> Portfolio</a>
+  <button class="button" onclick="location.href='project.html'"><i class="fas fa-edit faa-edit animated-hover fa-4x" style="font-size: 1em;"></i> Project</a> 
+  <button class="button" onclick="location.href='https://github.com/nutharabandara/nutharabandara.github.io'"><i class="fab fa-github faa-github animated-hover fa-4x" style="font-size: 1em;"></i> Github</a> 
+  <button class="button" onclick="location.href='https://rapidcharts.io/datascience'"><i class="fas fa-book faa-book animated-hover fa-4x" style="font-size: 1em;"></i> Course</a>
        </div>
       
    <container class="ncontainer">
