--- a/project.html
+++ b/project.html
@@ -9,7 +9,7 @@
 <!-- Title -->
     
 <title>Nuthara Bandara</title>
-<h1>Data Science Portfolio</h1>
+<h1>Data Science Project</h1>
     <h2><b>by Nuthara Bandara</b> </h2>
 
 <!-- CSS -->
