--- a/project.html
+++ b/project.html
@@ -37,7 +37,7 @@
        </div>
       
    <container class="ncontainer">
- <h2 class="bodyText"><span style="color: rgb(65, 48, 34); font-weight: 700;">A DIET TO LAST US THE AGES</span></h2>
+ <h3>A DIET TO LAST US THE AGES</h3>
      
      <p class="bodyText">
 There has long been talk over the sustainability of the food we eat. With food production and waste contributing to a third of Greenhouse Gas Emissions (GHG) today, significant degradation of our natural ecosystems and a loss of biodiversity worldwide it is imperative that action be taken. In doing so while eliminating food waste, eating locally and restructuring food production supply chains are crucial actions, simply making changes to our everyday diet can bring about great change. I aim to answer how this can be done by looking at country-level data. 
