--- a/project.html
+++ b/project.html
@@ -13,7 +13,7 @@
     <h2><b>by Nuthara Bandara</b> </h2>
 
 <!-- CSS -->
-<link rel="stylesheet" href="project.css">
+<link rel="stylesheet" href="styles.css">
 
 <!--Favicon-->  
 <link rel="shortcut icon" type="image/png" href="icon"/>
