--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
 <link rel="shortcut icon" type="image/png" href="icon"/>
 
 
+<!-- This allows for mobile friendly viewing-->
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+
+
+
 <head>
 
   <!-- head -->
