--- a/project.html
+++ b/project.html
@@ -18,6 +18,9 @@
 <!--Favicon-->  
 <link rel="shortcut icon" type="image/png" href="icon"/>
 
+<!-- This allows for mobile friendly viewing-->
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
 
 <head>
 
