--- a/project.html
+++ b/project.html
@@ -19,10 +19,10 @@
 <link rel="shortcut icon" type="image/png" href="icon"/>
 
 <!-- This allows for mobile friendly viewing-->
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta charset="UTF-8">
-
-<head>
+    
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- head -->
   
