--- a/project.html
+++ b/project.html
@@ -200,7 +200,6 @@ Looking at country level data the higher the GDP per capita of a country, the mo
 
 <p class="bodyText">
 In answering the question at hand, I used two main data sources- the Food and Agricultural Organisation (United Nations) and “Our World in Data”. Particularly with the FAO dataset, I had to undergo intensive cleaning and restructuring of the datasets to achieve my desired data visualisations. I therefore used Excel and STATA to merge data and isolate years. Note that a lot of the data used is from 2017 when the EAT-Lancet diet was introduced as country-level data was less extensive the more recent the chosen year. Furthermore, for measures like emissions, 2010 data is used which may serve as a bad indicator but with the free resources available these were the most comprehensive data points I could find.  
-Another obstacle I faced was sourcing APIs to support my arguments. This again given that I am restricted to free sources proved to be difficult which explains the lack of API usage. In addition to this I was restricted by the datasets used. Surveys and individual data for several developed countries exist with a particular emphasis on meat, fish and poultry. In extending this project, looking country-level case studies may prove to be illuminating. 
-
+Another obstacle I faced was sourcing APIs to support my arguments again given that I was restricted to free sources which explains the lack of API usage. Moreover, there was an overall lack of datasets at a global level addressing all food groups. Surveys and individual data for several developed countries exist with a particular emphasis on meat, fish and poultry. If I were to extend this project, looking at country-level case studies may prove to be illuminating. 
 
 </p>
